--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "NODE_ENV=development nodemon ./server/index.js --watch ./server/index.js",
     "build": "next build",
     "start": "NODE_ENV=production node ./server/index.js",
+    "export": "next export",
     "deploy": "npm run build && npm run export",
     "generate-page": "node scripts/index.js generate-page",
     "generate-recurring-billing": "node scripts/index.js generate-recurring-billing",
