--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@shopify/polaris": "^3.16.0",
     "@zeit/next-css": "^1.0.1",
     "apollo-boost": "^0.4.3",
+    "babel-plugin-styled-components": "^1.10.6",
     "cross-fetch": "^3.0.4",
     "dotenv": "^7.0.0",
     "graphql": "^14.2.1",
@@ -52,7 +53,8 @@
     "next-env": "^1.1.0",
     "react": "^16.8.6",
     "react-apollo": "^2.5.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "styled-components": "^4.3.2"
   },
   "devDependencies": {
     "@babel/plugin-transform-runtime": "^7.4.3",
